[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/star3.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyExplosionAnimation.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Enemies/EnemyExplosion.gd" type="Script" id=11]
[ext_resource path="res://Sounds/HitOnMe.wav" type="AudioStream" id=12]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0090909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.7
angular_velocity = 500.0
angular_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 60.0
damping_random = 0.7
scale_random = 0.5
scale_curve = SubResource( 4 )

[node name="EnemyExplosion" type="AnimatedSprite"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 11 )

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.75
one_shot = true
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
